Bug 176400 - Default language for spell checker cannot be changed
Summary: Default language for spell checker cannot be changed
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 179525 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-29 04:06 UTC by Yukiko Bando
Modified: 2009-01-03 21:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (546 bytes, patch)
2008-12-30 21:26 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yukiko Bando 2008-11-29 04:06:50 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Default language for spell checker is automatically set to Japanese on my system, probably due to Country and Language I selected, but there is no spell checker for this language. So I tried to change it to English but it is always reverted to Japanese. Fortunately, I can select English spell checker in KMail composer but it is not possible in KWrite.
Comment 1 Dario Andres 2008-12-30 21:25:48 UTC
Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.86 (KDE 4.1.86 (KDE 4.2 >= 20081221))
kdelibs svn rev. 903451 / kdebase svn rev. 903451
on ArchLinux x86_64 - Kernel 2.6.27.10

I can confirm this bug. The default language isn't getting applied
Comment 2 Dario Andres 2008-12-30 21:26:19 UTC
Created attachment 29765 [details]
Proposed patch
Comment 3 FiNeX 2008-12-31 11:10:17 UTC
The patch looks good (I've just tried it). 
Comment 4 FiNeX 2008-12-31 13:45:01 UTC
SVN commit 903727 by finex:

Allow to change the default spell checker.
Patch by Dario Andres
Tested and confirmed by me
Approved by Allen Winter


BUG:176400



 M  +1 -1      configwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=903727
Comment 5 Dario Andres 2009-01-03 21:48:05 UTC
*** Bug 179525 has been marked as a duplicate of this bug. ***