Allow to change the default spell checker. Patch by Dario Andres Tested and confirmed by me Approved by Allen Winter

BUG:176400


svn path=/trunk/KDE/kdelibs/; revision=903727